--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,12 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
 .main{
     width: 50vw;
-    height: 50vh;
+    height: 60vh;
     margin-top: 5em;
     margin-bottom: 3em;
 }
@@ -23,6 +24,7 @@ body {
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -32,9 +34,49 @@ body {
     height: 100%;
     display: grid;
     grid-template: repeat(3, 1fr) / repeat(3, 1fr);
-    
+    background-color: #f1f5f9;
+    margin-bottom: 3em;
 }
 
 .field{
     border: 1px solid black;
+    font-size: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: crosshair;
+}
+
+.restart {
+    width: 40%;
+    height: 2em;
+    font-size: 2rem;
+    border-radius: 5px;
+    background-color: #334155;
+    color: #fafafa;
+    transition: .3s;
+}
+
+
+.restart:hover{
+    background-color: #22c55e;
+    color: #09090b;
+    font-weight: 900;
+    scale: 1.1;
+    cursor: pointer;
+}
+
+
+
+footer{
+    position: absolute;
+    bottom: 0%;
+    width: 100%;
+    height: 5vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #94a3b8;
+    border: 1px solid #64748b;
+    font-size: 2rem;
 }
