--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,19 @@ body {
     overflow: hidden;
 }
 
+.header{
+    width: 100%;
+    padding: 1vh;
+    text-align: center;
+    font-size: 3rem;
+    background-color: #e2e8f0;
+    box-shadow: -2px 11px 5px -2px rgba(0,0,0,0.75);
+}
+
+h1{
+    color: #6b21a8
+}
+
 .main{
     width: 50vw;
     height: 60vh;
@@ -47,6 +60,10 @@ body {
     cursor: crosshair;
 }
 
+.field:hover{
+    background-color: #f5d0fe;
+}
+
 .restart {
     width: 40%;
     height: 2em;
@@ -59,7 +76,7 @@ body {
 
 
 .restart:hover{
-    background-color: #22c55e;
+    background-color: #9333ea;
     color: #09090b;
     font-weight: 900;
     scale: 1.1;
@@ -76,7 +93,7 @@ footer{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #94a3b8;
+    background-color: #c084fc;
     border: 1px solid #64748b;
     font-size: 2rem;
 }
